--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "yiisoft/yii2-swiftmailer": "*",
         "kartik-v/yii2-nav-x": "*",
         "kartik-v/yii2-widgets": "*",
-	"kartik-v/yii2-export": "*"
+	    "kartik-v/yii2-export": "*",
+        "kartik-v/yii2-mpdf": "*"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
